# msl-core-v3

./: README.md
src/: .gitignore  BUILD.gn  msl-core.gni  msl_build.py
src/build_overrides/: build.gni
src/rtc_base/: BUILD.gn  logging.cc  logging.h  system_time.cc  time_utils.cc  time_utils.h
src/sdk/msl-core/: BUILD.gn
src/sdk/msl-core/android/MSLApplication/: .gitignore  settings.gradle
src/sdk/msl-core/android/MSLApplication/app/: build.gradle
src/sdk/msl-core/android/MSLApplication/app/src/androidTest/java/com/msl/application/: ExampleInstrumentedTest.java
src/sdk/msl-core/android/MSLApplication/app/src/main/: AndroidManifest.xml
src/sdk/msl-core/android/MSLApplication/app/src/main/java/com/msl/application/: MainActivity.java
src/sdk/msl-core/android/MSLApplication/app/src/main/res/layout/: activity_main.xml
src/sdk/msl-core/android/MSLApplication/app/src/main/res/values/: strings.xml  themes.xml
src/sdk/msl-core/android/MSLApplication/app/src/main/res/values-night/: themes.xml
src/sdk/msl-core/android/MSLApplication/app/src/main/res/xml/: network_security_config.xml
src/sdk/msl-core/android/MSLApplication/app/src/test/java/com/msl/application/: ExampleUnitTest.java
src/sdk/msl-core/android/MSLApplication/gradle/wrapper/: gradle-wrapper.properties
src/sdk/msl-core/android/MSLApplication/msl-core/: build.gradle
src/sdk/msl-core/android/MSLApplication/msl-core/src/main/: AndroidManifest.xml
src/sdk/msl-core/android/MSLApplication/msl-core/src/main/cpp/: CMakeLists.txt  an_log.h  msl_core_jni.cpp
src/sdk/msl-core/android/MSLApplication/msl-core/src/main/cpp/msl/include/: zlog.h
src/sdk/msl-core/android/MSLApplication/msl-core/src/main/java/com/msl/app/: MSLLog.java
src/sdk/msl-core/linux/: BUILD.gn
src/sdk/msl-core/objc/: Info.plist
src/sdk/msl-core/objc/api/: RTCTtt.h  RTCTtt.mm
src/sdk/msl-core/objc/base/: RTCMacros.h
src/sdk/msl-core/src/: BUILD.gn  http_request.cc  http_request.h  msl_common.cc  msl_common.h  msl_manager.cc  msl_manager.h  msl_manager_interface.h  test.cc  version.h
src/sdk/msl-core/src/public/: test.cc
src/sdk/msl-core/src/zlog/: BUILD.gn  zlog.cc  zlog.h
src/tools/: .gitignore
src/tools/cmake/source/: .gitignore
src/tools/log_decrypt/: makefile
src/tools/log_decrypt/src/main/java/com/txt/: T.java
src/tools_msl/android/: build_aar copy.py  build_aar.py  build_aar.sh  config.ini  depot_tools.py
src/tools_msl/apple/: copy_framework_header.py
src/tools_msl/ios/: build_ios_libs.py  generate_umbrella_header.py
src/tools_msl/linux/: build_linux_libs.py  build_linux_libs.sh
src/tools_msl/mac/: build_mac_libs.py  build_mac_libs.sh  generate_umbrella_header.py
