import("//msl-core.gni")
print("=====is_ios:$is_ios is_android:$is_android is_linux:$is_linux is_mac:$is_mac")
group("default") {
  deps = []
  if (is_ios) {
    deps += [
      "//sdk/msl-core:framework_objc",
    ]
  } else if (is_mac) {
    deps += [
      "//sdk/msl-core:mac_framework_objc",
    ]
  } else if (is_android) {
    deps += [
      "//sdk/msl-core:libms-core",
    ]
  } else if (is_linux) {
    deps += [
      "//sdk/msl-core/linux:linux",
    ]
  }
}

