# Use bundled hermetic Xcode installation maintainted by Chromium,
# except for local iOS builds where it's unsupported.
if (host_os == "mac") {
  # _result = exec_script("//build/mac/should_use_hermetic_xcode.py",
  #                       [ target_os ],
  #                       "value")
  # assert(_result != 2,
  #        "Do not allow building targets with the default " +
  #            "hermetic toolchain if the minimum OS version is not met.")
  # use_system_xcode = _result == 0
  use_system_xcode = true
}