
import("//msl-core.gni")

rtc_library("timeutils") {
  visibility = [ "*" ]
  sources = [
    "system_time.cc",
    "system_time.h",
    "time_utils.cc",
    "time_utils.h",
  ]
#   deps = [
#     ":checks",
#     ":safe_conversions",
#     ":stringutils",
#     "system:rtc_export",
#   ]

  libs = []
  if (is_win) {
    libs += [ "winmm.lib" ]
  }
}

rtc_library("logging") {
  visibility = [ "*" ]
  libs = []
  # cflags = [
  #   "-Wno-global-constructors",
  #   "-Wno-unused-parameter",
  #   "-Wno-unused-private-field",
  #   "-Wno-unused-variable"
  # ]
  deps = [
    ":timeutils",
  ]

  configs += [
    "..:no_exit_time_destructors",
    "..:no_global_constructors",
  ]
  sources = [
    "logging.cc",
    "logging.h",
  ]
  
  if (is_mac) {
    frameworks = [ "Foundation.framework" ]
  }

  if (is_android) {
    libs += [ "log" ]
  }
  
}