# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

if (is_linux) {
  import("//msl-core.gni")

  group("linux") {
    if (is_linux) {
      public_deps = [
        ":libmsl-core",
        # ":libms-framework",
      ]

    }
  }

  shared_library("libmsl-core") {
    visibility = [ "*" ]
    # sources = [ "src/test.cc" ]
    # ldflags = [
    #   "-Wl,--build-id",
    #   # "-static-libstdc++"
    # ]
    deps = [
      "//third_party/spdlog:spdlog",
      "../src:libmsl_static"
    ]
    output_extension = "so"
  }
}

