# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.
import("//msl-core.gni")
rtc_static_library("libmsl_static") {
  visibility = [ "*" ]
  allow_poison = [ "audio_codecs", "default_task_queue" ]

  include_dirs = [
    "//sdk/msl-core/objc/api",
    "//sdk/msl-core/objc/base",
    "//sdk/msl-core/objc",
  ]

  cflags = [
    "-Wstrict-overflow",
    "-Wmissing-field-initializers",
  ]

  # configs += [
  #   "..:no_exit_time_destructors",
  # ]

  sources = [
    "test.cc",
    "http_request.cc"
  ]

  deps = [
    "zlog",
    "//third_party/spdlog:spdlog",
    "//third_party/curl:curl",
    "//rtc_base:timeutils",
  ]
}

