# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.18.1)

# Declares and names the project.

project("msl-core-jni")

# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.

set(PATH_TO_MEDIA_STREAM
        CACHE STRING ""
        )

set(PATH_TO_LIBS "${PATH_TO_MEDIA_STREAM}/../libs")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g -Wall -Wno-unused-variable -pthread")

add_definitions(-DAN_DEBUG)
include_directories(${PATH_TO_MEDIA_STREAM}/msl/include)

add_library(msl-core-lib
        SHARED
        IMPORTED)

set_target_properties( # Specifies the target library.
        msl-core-lib
        # Specifies the parameter you want to define.
        PROPERTIES IMPORTED_LOCATION
        # Provides the path to the library you want to import.
        ${PATH_TO_LIBS}/${ANDROID_ABI}/libmsl-core.so)

add_library( # Sets the name of the library.
        msl-core-jni

        # Sets the library as a shared library.
        SHARED

        # Provides a relative path to your source file(s).
        msl_core_jni.cpp)

# Searches for a specified prebuilt library and stores the path as a
# variable. Because CMake includes system libraries in the search path by
# default, you only need to specify the name of the public NDK library
# you want to add. CMake verifies that the library exists before
# completing its build.

find_library( # Sets the name of the path variable.
        log-lib

        # Specifies the name of the NDK library that
        # you want CMake to locate.
        log)

# Specifies libraries CMake should link to your target library. You
# can link multiple libraries, such as libraries you define in this
# build script, prebuilt third-party libraries, or system libraries.

target_link_libraries( # Specifies the target library.
        msl-core-jni

        # Links the target library to the log library
        # included in the NDK.
        ${log-lib}
        msl-core-lib)